# claude-server

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Makefile  deploy-n8n-workflow.sh  docker-compose.n8n.yml  docker-compose.tools.yml  n8n-workflow-klipper-self-healing.json  n8n-workflow-review.md  pyproject.toml  run_mcp.py
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: __init__.py  exceptions.py  main.py
app/api/: admin.py  agents.py  ai.py  auth.py  backup.py  ci.py  classifier.py  claude_code.py  csp.py  deploy.py  dev.py  devops.py  digest.py  dispatch.py  files.py  kernel.py  llm.py  logs.py  memory.py  monitoring.py  n8n.py  network.py  projects.py  prometheus.py  rag.py  research.py  security.py  shell.py  social.py  ssh.py  system.py  tasks.py  telegram_bot.py  validation.py  vps.py  webhooks.py  webops.py  ws_status.py
app/auth/: api_key.py  jwt_handler.py  permissions.py
app/claude_ui/: index.html
app/core/: agent_system.py  agent_watchdog.py  ai_inference.py  anomaly_check.py  backup_manager.py  ci_db.py  ci_fixer.py  ci_notify.py  ci_runner.py  ci_signal_dedup.py  code_review_agent.py  code_reviewer.py  config.py  correlation_check.py  dead_gate.py  dev_manager.py  devops_agent.py  digest.py  drift_check.py  emit_throttle.py  events.py  file_manager.py  kernel_bridge.py  liveness.py  log_manager.py  log_novelty.py  monitor_agent.py  network_proxy.py  privacy.py  prometheus_exporter.py  provenance.py  question_validator.py  rag_engine.py  research_agent.py  shell_executor.py  ssh_client.py  system_manager.py  task_queue.py  terminal_manager.py  webops_proxy.py
app/dashboard/: index.html
app/db/: data_layer.py  database.py
app/mcp/: goose_pentest_server.py  server.py  tools.py
app/middleware/: audit_log.py  dependencies.py  exception_events.py  rate_limit.py  request_id.py
app/models/: schemas.py
app/ws/: auth.py  connection_manager.py  logs.py  monitor.py  terminal.py
automation/: ad-advisor.sh  adsense-readiness.sh  agent-health-report.py  agent-health-report.sh  agent-watchdog.py  agent-watchdog.sh  alert-check.sh  anomaly-check.py  autonomous-classifier-v2.sh  autonomous-classifier.sh  autonomous-claude-guardrails.md  autonomous-claude-settings.json  autonomous-claude.sh  autonomous-daily-summary.sh  autonomous-health-check.sh  autonomous-spawn-audit.sh  autonomous-spawn-retry.sh  autonomous-spawn-summarize.sh  autonomous-spawn-threat-detect.sh  backup-monitor.sh  backup-restore-test.sh  bilge-arena-failover.sh  ci-fixer-settings.json  claude-code-update.sh  cleanup-artifacts.sh  codex-feed-poll.sh  content-editor.sh  correlation-check.py  crontab  daily-backup.sh  data-analyst.sh  db-retention.sh  demo-reset-test.sh  digest-send.sh  digest.py  drift-check.py  e2e-live-test.sh  edge-log-redact.sh  execute-approved-plan.sh  health-check.sh  (+36 more)
config/: env  nginx.conf  prometheus.yml  server.yml
docs/: MEMORY-ARCHITECTURE.md  RUNBOOK.md  ai-control-gap-design.md  autonomous-architecture.md  awareness-ingestion-research-2026-06-21.md  engineering-audit-july-2026.md  faz4-blast-radius-scope.md  faz6-orchestra-boundary.md  goose-extension-setup.md  goose-pentest-mcp-submission-checklist.md  goose-self-pentest-extension-plan.md  klipper-memory-extraction-plan.md  letta-multi-device-rfc.md  living-system-plan.md  new-session-prep.md  notify-cron-design.md  pr-review-system.md  renderhane-ig-onboarding.md  system-current-state.md
docs/memory-prompts/: claude-code-skill-remote.md  proje-kayit-prompt.md  windows-masaustu.md
docs/n8n-workflows/: README.md
docs/plans/: 2026-03-27-implementation-plan.md  (+3 more)
e2e-live/: package-lock.json  package.json  playwright.config.ts  results.json
e2e-live/report/: index.html
extensions/polymem/: .gitignore  README.md  pyproject.toml
extensions/polymem/src/polymem/: __init__.py  app.py  auth.py  db.py  models.py  schema.sql
extensions/polymem/src/polymem/routes/: devices.py  memories.py  search.py  sessions.py
extensions/polymem/tests/: conftest.py  test_devices.py  test_memories.py  test_search.py  test_sessions.py
infra/: README.md
kernel/: Makefile  dkms.conf  install-dkms.sh  modules-load.conf  nf_linux_ai.c  proc_linux_ai.c  usb_linux_ai.c
n8n-workflows/: google-maps-email-scraper-fixed.json  google-maps-email-scraper.json  system-auto-repair.json
saas-factory/: generate.py
scripts/: _klipper_poller_core.py  _loop_poller_filter.py  _throwaway_faz2_smoke.py  ad-advisor.py  adsense-oauth-setup.py  adsense-readiness.py  agent-feed.sh  auto-investigate.py  bilge-english-batch-audit.sh  blast-radius.sh  check-pr-gate.sh  claude-memory.sh  claude-sessions.sh  content-editor.py  data-analyst.py  db-query.sh  emit-event.sh  freq_check.py  generate_api_key.py  gsc-oauth-setup.py  handoff.py  install.sh  intent-liveness-audit.py  klipper-auto-loop.sh  klipper-cron-wrap.sh  klipper-dispatch.sh  klipper-event.sh  klipper-loop-poller.sh  klipper-note-poller.sh  mark-note-read.sh  mcp-ssh-wrapper.bat  mcp-ssh-wrapper.sh  measure_loop_lag_direct.py  measure_memory_eventloop_lag.py  memory-archive-stale.sh  memory-session-start.sh  memory-synthesize.py  memory-triage-llm.py  memory-triage.sh  migrate-spawn-failures.sh  (+24 more)
tests/: conftest.py  test_ad_advisor.py  test_admin_api.py  test_adsense_readiness.py  test_agent_actions.py  test_agent_feed.py  test_agent_health_report.py  test_agent_watchdog.py  test_agents.py  test_agents_runtime.py  test_ai.py  test_alert_health_spine.py  test_anomaly_check.py  test_audit.py  test_auth.py  test_auth_api.py  test_auto_investigate.py  test_backup.py  test_blast_radius.py  test_ci_api.py  test_ci_db.py  test_ci_fixer.py  test_ci_lesson_flow.py  test_ci_notify.py  test_ci_runner.py  test_ci_schema.py  test_ci_schemas.py  test_ci_signal_dedup.py  test_classifier.py  test_claude_code.py  test_code_reviewer.py  test_config.py  test_connection_manager.py  test_content_editor.py  test_correlation_check.py  test_cors.py  test_cosession.py  test_csp_api.py  test_data_analyst.py  test_db.py  (+91 more)
tools/: cron-outcome-allowlist.txt  lint-cron-outcome.sh
(+123 files in other folders)
