[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linux-ai-server"
version = "0.1.0"
description = "API server for full kernel-level Linux control via REST and MCP"
requires-python = ">=3.11"
license = "GPL-2.0-only"
authors = [{ name = "Zaman Huseyinli" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "psutil>=6.0.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0",
    "structlog>=24.0.0",
    "paramiko>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "anyio[trio]>=4.0",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "bandit>=1.7.0",
]

[project.scripts]
linux-ai-server = "app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT", "SIM", "TCH"]
ignore = ["S101", "S603", "S607"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
