[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymem"
version = "0.1.0"
description = "Multi-device tiered memory for LLM agents — FastAPI router + SQLite-first"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "KlipperOS" }]
keywords = ["memory", "llm", "agent", "fastapi", "multi-device", "tiered-memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2",
    "aiosqlite>=0.20",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27",
    "ruff>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/turer73/polymem"
Repository = "https://github.com/turer73/polymem"
Documentation = "https://github.com/turer73/polymem/blob/main/README.md"
Issues = "https://github.com/turer73/polymem/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/polymem"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 120
